Refs #156: Removed User usage in  Country, CountryRepo, and RegisterCountryController classes and unit tests  (US007)